oxiplate-derive/tests/broken/for/for-no-in.stderr
error: Expected 'in'
 --> tests/broken/for/for-no-in.rs:4:35
  |
4 | #[oxiplate_inline("{%- for number numbers -%}{{ number }} + {{ number_to_add }} = {{ numb + number_to_add }}{% endfor %}")]
  |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
